--- a/frontend/biome.json
+++ b/frontend/biome.json
@@ -1,25 +1,62 @@
 {
-  "$schema": "https://biomejs.dev/schemas/2.2.0/schema.json",
-  "vcs": {
-    "enabled": true,
-    "clientKind": "git",
-    "useIgnoreFile": true
-  },
+  "$schema": "https://biomejs.dev/schemas/2.3.11/schema.json",
+
   "files": {
-    "ignoreUnknown": true,
-    "includes": ["**", "!node_modules", "!.next", "!dist", "!build"]
+    "includes": ["**", "!**/node_modules", "!**/.next", "!**/out", "!**/dist", "!**/.turbo"]
   },
+
   "formatter": {
     "enabled": true,
     "indentStyle": "space",
-    "indentWidth": 2
+    "indentWidth": 2,
+    "lineWidth": 100
   },
+
+  "assist": {
+    "actions": {
+      "source": {
+        "organizeImports": "on"
+      }
+    }
+  },
+
   "linter": {
     "enabled": true,
     "rules": {
       "recommended": true,
+
+      "correctness": {
+        "noUnusedVariables": "error",
+        "noUnusedImports": "error",
+        "useExhaustiveDependencies": "warn",
+        "useHookAtTopLevel": "error"
+      },
+
+      "style": {
+        "useConst": "error",
+        "noNonNullAssertion": "warn"
+      },
+
+      "complexity": {
+        "noExtraBooleanCast": "error",
+        "noUselessFragments": "warn"
+      },
+
       "suspicious": {
-        "noUnknownAtRules": "off"
+        "noExplicitAny": "warn",
+        "noDoubleEquals": "error",
+        "noArrayIndexKey": "warn"
+      },
+
+      "a11y": {
+        "useAltText": "error",
+        "useAnchorContent": "warn",
+        "useButtonType": "warn",
+        "useValidAnchor": "error"
+      },
+
+      "nursery": {
+        "useSortedClasses": "off"
       }
     },
     "domains": {
@@ -27,11 +64,20 @@
       "react": "recommended"
     }
   },
-  "assist": {
-    "actions": {
-      "source": {
-        "organizeImports": "on"
-      }
+
+  "javascript": {
+    "formatter": {
+      "quoteStyle": "single",
+      "semicolons": "asNeeded",
+      "trailingCommas": "es5",
+      "arrowParentheses": "asNeeded"
+    },
+    "jsxRuntime": "transparent"
+  },
+
+  "css": {
+    "parser": {
+      "tailwindDirectives": true
     }
   }
 }
