--- a/backend/package.json
+++ b/backend/package.json
@@ -11,7 +11,8 @@
     "lint": "biome lint",
     "lint:fix": "biome lint --write",
     "format": "biome format --write",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "validate": "pnpm format && pnpm lint && pnpm typecheck"
   },
   "keywords": [],
   "author": "",
