--- a/backend/package.json
+++ b/backend/package.json
@@ -12,7 +12,7 @@
     "lint:fix": "biome lint --write",
     "format": "biome format --write",
     "typecheck": "tsc --noEmit",
-    "validate": "pnpm format && pnpm lint && pnpm typecheck"
+    "validate": "npm run format && npm run lint && npm run typecheck"
   },
   "keywords": [],
   "author": "",
