--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,5 +1,6 @@
-PORT=5000
+PORT=3001
 MONGODB_URI=mongodb://localhost:27017/flowtrack
 JWT_SECRET=your-super-secret-jwt-key-change-in-production
 JWT_EXPIRES_IN=7d
 NODE_ENV=development
+FRONTEND_URL=http://localhost:3000
